openshift_fl/pod_persistence_party_template.yml
kind: Pod
apiVersion: v1
metadata:
  name: {}
  labels:
    app: {}
spec:
  containers:
    - name: ibmfl
      image: image-registry.openshift-image-registry.svc:5000/{}/{}
      volumeMounts:
        - name: datasets-storage
          mountPath: {}
      resources:
        limits:
          cpu: "{}"
          memory: "{}"
          nvidia.com/gpu: 1
        requests:
          cpu: "0.5"
          memory: "2Gi"
          nvidia.com/gpu: 1
      ports:
        - name: ibmfl
          containerPort: 80
          protocol: TCP
      command: {}
  volumes:
    - name: datasets-storage
      persistentVolumeClaim:
                  claimName: {}
