openshift_fl/route_template.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: {}
spec:
  to:
    kind: Service
    name: {}
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
